added sorting of molecule files

--- a/Simple Molecule Viewer.ipynb
+++ b/Simple Molecule Viewer.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import py3Dmol, os, glob\n",
+    "import py3Dmol, glob\n",
     "from rdkit import Chem\n",
     "import ipywidgets as widget\n",
     "\n",
@@ -126,6 +126,34 @@
     "}\n",
     "</style>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
