use os.path to joing paths

--- a/Improved Molecule Viewer.ipynb
+++ b/Improved Molecule Viewer.ipynb
@@ -19,11 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import py3Dmol, glob\n",
+    "import os.path\n",
     "from rdkit import Chem\n",
     "import ipywidgets as widgets\n",
     "\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {
     "scrolled": false
    },
@@ -64,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8371c484f58e499792386c8ec5ba9ae9",
+       "model_id": "830dbafa88804ea39bf9a360e6c5cb86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +113,7 @@
     "    style = drop_style.value\n",
     "    outbox.clear_output(wait = True)\n",
     "    name, display_text = data[drop_file.value]\n",
-    "    filename = \"data\\\\\" + name + \".pdb\"\n",
+    "    filename = os.path.join(\"data\" , name + \".pdb\")\n",
     "    nice_name.value = name_format.format(display_text)\n",
     "    m = Chem.MolFromPDBFile(filename, sanitize=False, removeHs=False)\n",
     "    with outbox:\n",
@@ -122,7 +123,7 @@
     "    style = drop_style2.value\n",
     "    outbox2.clear_output(wait = True)\n",
     "    name, display_text = data[drop_file2.value]\n",
-    "    filename = \"data\\\\\" + name + \".pdb\"\n",
+    "    filename = os.path.join(\"data\" , name + \".pdb\")\n",
     "    nice_name2.value = name_format.format(display_text)\n",
     "    m = Chem.MolFromPDBFile(filename, sanitize=False, removeHs=False)\n",
     "    with outbox2:\n",
@@ -176,26 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "div.input{\n",
-       "    display:none;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<style>\n",
