added ball and stick

--- a/Improved Molecule Viewer.ipynb
+++ b/Improved Molecule Viewer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +43,15 @@
     "    ----\n",
     "        viewer: py3Dmol.view, a class for constructing embedded 3Dmol.js views in ipython notebooks.\n",
     "    \"\"\"\n",
-    "    assert style in ('line', 'stick', 'sphere', 'cartoon')\n",
+    "    assert style in ('line', 'stick', 'ball & stick', 'sphere', 'cartoon')\n",
     "    mblock = Chem.MolToMolBlock(mol)\n",
     "    viewer = py3Dmol.view(width=size[0], height=size[1])\n",
     "    viewer.addModel(mblock, 'mol')\n",
-    "    viewer.setStyle({style:{}})\n",
+    "    if style == 'ball & stick':\n",
+    "        viewer.setStyle({'stick':{'radius':0.1}})\n",
+    "        viewer.addStyle({'sphere':{'scale':0.25}})\n",
+    "    else:\n",
+    "        viewer.setStyle({style:{}})\n",
     "    if surface:\n",
     "        viewer.addSurface(py3Dmol.SAS, {'opacity': opacity})\n",
     "    viewer.zoomTo()\n",
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -65,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "830dbafa88804ea39bf9a360e6c5cb86",
+       "model_id": "49d181ea593d4b26a3993385a7bd02ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,13 +136,13 @@
     "drop_layout = widgets.Layout(height = \"30px\", width = \"250px\")\n",
     "drop_file = widgets.Dropdown(options = data.keys(), description = \"File\",\n",
     "                            layout = drop_layout)\n",
-    "drop_style = widgets.Dropdown(options = ['line', 'stick', 'sphere'], value = 'stick', description = 'Style:',\n",
+    "drop_style = widgets.Dropdown(options = ['line', 'stick', 'ball & stick', 'sphere'], value = 'stick', description = 'Style:',\n",
     "                             layout = drop_layout)\n",
     "check = widgets.Checkbox(value = True, description =\"show two molecules\")\n",
     "\n",
     "# output2\n",
     "drop_file2 = widgets.Dropdown(options = data.keys(), description = \"File\", layout = drop_layout)\n",
-    "drop_style2 = widgets.Dropdown(options = ['line', 'stick', 'sphere'], value = 'stick', description = 'Style:',\n",
+    "drop_style2 = widgets.Dropdown(options = ['line', 'stick', 'ball & stick', 'sphere'], value = 'stick', description = 'Style:',\n",
     "                              layout = drop_layout)\n",
     "\n",
     "placeholder = widgets.Label(\"\")\n",
@@ -192,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
