add several useful molecules

--- a/Improved Molecule Viewer.ipynb
+++ b/Improved Molecule Viewer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {
     "scrolled": false
    },
@@ -69,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49d181ea593d4b26a3993385a7bd02ac",
+       "model_id": "a45304f8a7784acdb541140052e31ea7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,6 +91,9 @@
     "    'NH3': (\"ammonia\", \"NH3\"),\n",
     "    'BrF5': ('brf5', 'BrF5'), \n",
     "    'CH4': ('ch4', \"CH_4\"),\n",
+    "    'CH3Cl': ('CH3Cl', \"CH_3Cl\"),\n",
+    "    'CH2Cl2': ('CH2Cl2', \"CH_2Cl_2\"),\n",
+    "    'CHCl3': ('CHCl3', \"CHCl_3\"),\n",
     "    'ClF3': ('clf3', \"ClF_3\"),\n",
     "    'H2CO': ('h2co', \"H_2CO\"),\n",
     "    'IF5': ('if5', \"IF_5\"),\n",
@@ -100,10 +103,14 @@
     "    'SO2': ('sulfur_dioxide', \"SO_2\"),\n",
     "    'XeF2': ('xef2', \"XeF_2\"),\n",
     "    'XeF4': ('xef4', \"XeF_4\"), \n",
+    "    'cis-1,2-dichloroethene': ('cis-C2H2Cl2', \"cis-C_2H_2Cl_2\"),\n",
+    "    'trans-1,2-dichloroethene': ('trans-C2H2Cl2', \"trans-C_2H_2Cl_2\"),\n",
     "    'cis-[PtCl2(NH3)2]': ('cis_pt', \"cis-[PtCl2(NH3)2]\"),\n",
     "    'trans-[PtCl2(NH3)2]': ('trans_pt', \"trans-[PtCl2(NH3)2]\"),\n",
     "    'R-2-butanol': ('rbut_2ol', \"R-CH_3CH_2CH(OH)CH_3\"),\n",
     "    'S-2-butanol': ('sbut_2ol', \"S-CH_3CH_2CH(OH)CH_3\"),\n",
+    "    'R-CHIBrCl': ('R-CHIBrCl', 'R-CHIBrCl'),\n",
+    "    'S-CHIBrCl': ('S-CHIBrCl', 'S-CHIBrCl'),\n",
     "    'R-complex': ('tris_en1', \"R-[Co(en)3]\"),\n",
     "    'S-complex': ('tris_en2', \"S-[Co(en)3]\"),\n",
     "}\n",
@@ -178,6 +185,13 @@
     "style_selector(\"start\")\n",
     "style_selector2(\"start\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
